# MediaProjectionDemo

screenop/: CMakeLists.txt  build.gradle
screenop/src/main/cpp/: rtmp_handle.cpp
screenop/src/main/java/com/cry/screenop/: MediaProjectionHelper.java  SurfaceFactory.java
screenop/src/main/java/com/cry/screenop/recorder/: MediaCodecHelper.java  MediaCodecLogHelper.java  MediaCodecPermissionHelper.java  MediaCodecReflectFieldName.java  MpInstance.java
screenop/src/main/java/com/cry/screenop/recorder/encoder/: VideoEncoder.java
screenop/src/main/java/com/cry/screenop/recorder/rtmp/: RtmpHandle.java
screenop/src/main/java/com/cry/screenop/recorder/sender/: Packager.java  VideoSender.java
screenop/src/main/java/com/cry/screenop/recorder/sender/model/: RESCoreParameters.java  Size.java
screenop/src/main/java/com/cry/screenop/recorder/sender/tools/: BuffSizeCalculator.java  ByteArrayTools.java  LogTools.java
screenop/src/main/java/com/cry/screenop/recorder/stream/amf/: AmfArray.java  AmfBoolean.java  AmfData.java  AmfDecoder.java  AmfMap.java  AmfNull.java  AmfNumber.java  AmfObject.java  AmfString.java  AmfType.java  AmfUndefined.java  Util.java
screenop/src/main/java/com/cry/screenop/recorder/stream/entity/: Frame.java  Watermark.java  (+1 more)
screenop/src/main/java/com/cry/screenop/recorder/utils/: IOUtils.java  WeakHandler.java
screenop/src/main/java/com/cry/screenop/shot/: ImageReaderAvailableObservable.java  MediaProjectionHelper.java  RxScreenShot.java
screenop/src/main/java/me/lake/librestreaming/rtmp/: FLvMetaData.java  RESRtmpSender.java
(+45 files in other folders)
